fix custom template not working within backend

--- a/config/controller.yml
+++ b/config/controller.yml
@@ -16,6 +16,7 @@ services:
     numero2\ContactPersonsBundle\Controller\ContentElement\ContactPersonController:
         arguments:
             - '@event_dispatcher'
+            - '@contao.routing.scope_matcher'
 
 
     numero2\ContactPersonsBundle\Controller\FrontendModule\ContactPersonListController:
