--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "symfony/event-dispatcher-contracts": "^3.0",
         "symfony/http-foundation": "^6.4 || ^7.0",
         "symfony/http-kernel": "^6.4 || ^7.0",
-        "symfony/translation-contracts": "^3.0"
+        "symfony/translation-contracts": "^3.0",
+        "jeroendesloovere/vcard": "^1.0"
     },
     "require-dev": {
         "contao/manager-plugin": "^2.0",
